fixng wobly overflow x scroll

--- a/client/src/scripts/app.css
+++ b/client/src/scripts/app.css
@@ -1,3 +1,9 @@
+body,#root
+{
+overflow:hidden;
+width:100%;
+}
+
 p {
   text-align: justify;
 }
@@ -46,7 +52,7 @@ hr {
   width: 100%;
   height: 100%;
   margin-top: 4%;
-  overflow-y: scroll;
+
   background-color: rgba(243, 236, 236, 0.9);
 
 }
@@ -449,6 +455,7 @@ h3 {
   line-height: 1.5em;
   font-size: large;
   overflow-y: scroll;
+  overflow-x: hidden;
 
 
 
