--- a/client/src/scripts/mobile-portrait.css
+++ b/client/src/scripts/mobile-portrait.css
@@ -92,7 +92,7 @@
     font-size: large;
     margin-top: 10%;
     margin-bottom: 10%;
-    overflow-y: scroll;
+
   }
 
   fieldset {
